--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,5 +39,10 @@ services:
     ports:
       - "8083:8083"
 
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+
 volumes:
   postgres_data:
