--- a/usr1/src/main/resources/application.properties
+++ b/usr1/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.liquibase.enabled=false
 
 spring.jpa.hibernate.ddl-auto=validate
+
+spring.cache.type=redis
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.timeout=10000
+spring.cache.cache-names=USER_CACHE,USER_EMAIL_CACHE,CARD_CACHE
