Add docker, local profile and docker profile.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,17 @@ services:
     depends_on:
       - postgres
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/mydb
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: 1111
+      SPRING_PROFILES_ACTIVE: docker
+      SPRING_CONFIG_LOCATION: /config/
+      DB_HOST: postgres
+      DB_PORT: ${DB_PORT}
+      DB_NAME: ${DB_NAME}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+    volumes:
+      - ./usr1/src/main/resources:/config
     ports:
       - "8083:8083"
 
