--- a/usr1/src/main/resources/application.properties
+++ b/usr1/src/main/resources/application.properties
@@ -1,14 +1,10 @@
-spring.datasource.url=jdbc:postgresql://inno-microservices:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.liquibase.enabled=false
 
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
 
 spring.cache.type=redis
-spring.data.redis.host=${REDIS_HOST}
-spring.data.redis.port=${REDIS_PORT}
 spring.data.redis.timeout=10000
 spring.cache.cache-names=USER_CACHE,USER_EMAIL_CACHE,CARD_CACHE
+
+spring.application.name=user_service
