--- a/usr1/pom.xml
+++ b/usr1/pom.xml
@@ -115,6 +115,11 @@
             <version>1.20.6</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
