--- a/usr1/pom.xml
+++ b/usr1/pom.xml
@@ -21,6 +21,7 @@
         <maven.compiler.target>22</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+        <sonar.organization>lizavetaliakh</sonar.organization>
     </properties>
 
     <dependencies>
