Fix CI pipeline file 2.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,12 @@
 name: CI pipeline
+
 on:
   push:
     branches:
       - main
   pull_request:
     types: [opened, synchronize, reopened]
+
 jobs:
   build:
     name: Build, test, analyze and build docker image
@@ -26,13 +28,13 @@ jobs:
       postgres:
         image: postgres:15
         env:
-          POSTGRES_DB: $DB_NAME
-          POSTGRES_USER: $DB_USERNAME
-          POSTGRES_PASSWORD: $DB_PASSWORD
+          POSTGRES_DB: ${{ secrets.DB_NAME }}
+          POSTGRES_USER: ${{ secrets.DB_USERNAME }}
+          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
         ports:
           - 5432:5432
-        options:
-          --health-cmd "pg_isready -U $DB_USERNAME"
+        options: >-
+          --health-cmd "pg_isready -U ${{ secrets.DB_USERNAME }} -d ${{ secrets.DB_NAME }}"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -58,9 +60,9 @@ jobs:
 
       - name: Wait for PostgreSQL to be ready
         run: |
-          echo "Waiting for PostgreSQL to start"
-          for i in {1..15} do
-            nc -z localhost 5432 && echo "PostgreSLQ is ready" && break
+          echo "Waiting for PostgreSQL to start..."
+          for i in {1..15}; do
+            nc -z localhost 5432 && echo "PostgreSQL is ready" && break
             echo "Waiting..."
             sleep 2
           done
@@ -73,10 +75,10 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-            -Dsonar.projectKey=$SONAR_PROJECT_KEY \
-            -Dsonar.organization=$SONAR_ORGANIZATION \
-            -Dsonar.host.url=$SONAR_HOST_URL \
-            -Dsonar.login=$secrets.SONAR_TOKEN
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
       - name: Build Docker image
         run: docker build -t user-service:latest .
